--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node server/server.js",
+    "build": "node server/seedData.js",
     "dev": "node --watch server/server.js",
     "seed": "node server/seedData.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "chatbot",
